# blog

./: .gitignore  .gitmodules  Main.hs  Makefile  site.cabal
pages/posts/: 20241230_agda-test.lagda  20241230_haskell-test.lhs  20241230_md-test.md
templates/: default.html
