cabal-version:      3.0
name:               site
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable site
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base,
        hakyll,
        data-default
    ghc-options: -threaded
    default-language: Haskell2010
    default-extensions:
        BlockArguments,
        OverloadedStrings